<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_my_profile" />
        <item android:id="@+id/nav_discover_places"
            android:icon="@drawable/ic_menu_places"
            android:title="@string/menu_discover_places" />
        <item android:id="@+id/nav_discover_routes"
            android:icon="@drawable/ic_menu_routes"
            android:title="@string/menu_discover_routes"/>
        <item android:id="@+id/nav_my_fav_places"
            android:icon="@drawable/ic_menu_favorite_places"
            android:title="@string/menu_my_fav_places"/>
        <item android:id="@+id/nav_my_fav_routes"
            android:icon="@drawable/ic_menu_favorite_routes"
            android:title="@string/menu_my_fav_routes"/>
        <item android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help"/>
    </group>
</menu>